# mlx-audio

./: .env  .gitignore  .pre-commit-config.yaml  ADDING_A_MODEL.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  Hunyuan-A13B-Instruct-4bit-DWQ  Kimi-Dev-72B-4bit-DWQ  LFM2-1.2B-MLX-8bit  MANIFEST.in  MLX_AUDIO_GUIDE.md  Package.resolved  Package.swift  QUICKSTART.md  README.md  SETUP.md  download_kokoro_voices.sh  mkdocs.yml  mlx_audio_dev.command  pyproject.toml  pytest.ini  requirements copy.txt  requirements-core.txt  requirements-stt.txt  requirements-tts.txt  requirements.txt  setup.py  test_acestep.py
.github/workflows/: docs-pages.yml  python-publish.yml  swift.yml  tests.yml
artifacts/youth_natural/: FINAL_REPORT.md  bandwidth_audit.json  baseline_report.md  dac_codebook_contribution_report.json  dataset_rights_report.json  dataset_snapshot_manifest.json  environment.json  evaluation_report.md  merge_parity_report.json  model_card.md  source_manifest.json  tiny_overfit_report.md
benchmarks/: qwen3_tts_benchmark.py
docs/: DESIGN_SWIFT_BRIDGE.md
docs/api-reference/: stt.md  tts.md
docs/contributing/: adding-a-model.md  dev-setup.md
docs/getting-started/: installation.md
docs/guides/: voice-cloning.md
docs/models/: index.md
docs/models/stt/: fun-asr-nano.md  index.md
examples/: indextts2_inference.py  medasr_live.py  medasr_transcribe.py  moss_sound_effects.py  moss_tts_basic.py  moss_tts_continuation_showcase.py  moss_tts_deterministic.py  moss_tts_long_form.py  moss_tts_pronunciation_control.py  moss_tts_realtime_multiturn_agent.py  moss_tts_realtime_text_deltas.py  moss_tts_showcase_album.py  moss_tts_voice_cloning.py  moss_ttsd_dialogue.py  moss_voice_design.py  omnivoice_clone_demo.py
examples/bible-audiobook/: README.md
mlx_audio/: audio_io.py  base.py  cli.py  convert.py  dev.py  dsp.py  llm_client copy.py  llm_client.py  mcp_client.py  server-updated.py  server-updated2.py  server.py  server_ollama.py  simple_mic_test.html  utils.py  version.py
mlx_audio/codec/: __init__.py
mlx_audio/evals/: README.md  __init__.py  instruct_tts_eval.py  utils.py
mlx_audio/lid/: utils.py
mlx_audio/research/: __init__.py
mlx_audio/ss/: __init__.py
mlx_audio/sts/: __init__.py  simple_voice_pipeline.py  utils.py  voice_pipeline.py
mlx_audio/stt/: generate.py  utils.py
mlx_audio/tests/: test_dsp.py  test_lazy_imports.py  test_optional_deps.py  test_server.py  test_utils.py
mlx_audio/tts/: audio_player.html  audio_player.py  audio_player_back_up.html  generate.py  utils.py
mlx_audio/ui/: package-lock.json  package.json
mlx_audio/vad/: utils.py
mlx_audio_swift/Core/: AudioBuffer.swift  PythonSetup.swift
mlx_audio_swift/Tests/: STTBridgeTests.swift
mlx_audio_swift/sts/: VoicePipeline.swift
mlx_audio_swift/stt/: STTBridge.swift
mlx_audio_swift/tts/: Package.swift  readme.md
models/: Hunyuan-A13B-Instruct-4bit-DWQ
prompts/: conversational_a.txt  conversational_b.txt
research/configs/: youth_natural_data.yaml  youth_natural_eval.yaml  youth_natural_train.yaml
research/specs/: youth_adapter_manifest.schema.json  youth_agent_handoff.schema.json  youth_dataset_item.schema.json  youth_generation_record.schema.json
research/youth_natural/: BANDWIDTH_POLICY.md  DATASET_POLICY.md  EVALUATION_PLAN.md  FUTURE_RL_HANDOFF.md  SUBAGENT_EXECUTION_PLAN.md  TRAINING_PLAN.md
scripts/: convert_moss_models.py
sortformer-v2.1-mlx/: README.md
swift/Swift-TTS/: readme.md
(+640 files in other folders)
